// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThesisInfo renders empty if null 1`] = `<DocumentFragment />`;

exports[`ThesisInfo renders full thesis info 1`] = `
<DocumentFragment>
  <span>
    <span>
      Thesis: 
    </span>
    <span>
      <div
        class="__InlineList__ di"
        data-testid="inline-data-list"
      >
        <ul>
          <li>
            <span>
              Institution 1
            </span>
          </li>
        </ul>
      </div>
       
    </span>
    <span>
      (defense: 12-12-2012)
    </span>
  </span>
</DocumentFragment>
`;

exports[`ThesisInfo renders with date and without defense date 1`] = `
<DocumentFragment>
  <span>
    <span>
      Thesis: 
    </span>
    <span>
       
    </span>
    <span>
      (11-11-2011)
    </span>
  </span>
</DocumentFragment>
`;

exports[`ThesisInfo renders with defense date 1`] = `
<DocumentFragment>
  <span>
    <span>
      Thesis: 
    </span>
    <span>
       
    </span>
    <span>
      (defense: 12-12-2012)
    </span>
  </span>
</DocumentFragment>
`;

exports[`ThesisInfo renders without any date 1`] = `
<DocumentFragment>
  <span>
    <span>
      Thesis: 
    </span>
    <span>
      <div
        class="__InlineList__ di"
        data-testid="inline-data-list"
      >
        <ul>
          <li>
            <span>
              Institution 1
            </span>
          </li>
        </ul>
      </div>
       
    </span>
    <span />
  </span>
</DocumentFragment>
`;
